--- a/frontend/src/app/list-clients/list-clients.component.html
+++ b/frontend/src/app/list-clients/list-clients.component.html
@@ -8,13 +8,22 @@
     >
       Incluir
     </button>
-    <button
-      class="btn btn-success btn-lg"
-      (click)="editUser()"
-      [disabled]="!isClientSelected"
-    >
-      Editar
-    </button>
+    <div>
+      <button
+        class="btn btn-success btn-lg"
+        (click)="editUser()"
+        [disabled]="!isClientSelected"
+      >
+        Editar
+      </button>
+      <button
+        class="btn btn-danger btn-lg ml-2"
+        (click)="deleteUser()"
+        [disabled]="!isClientSelected"
+      >
+        Remover
+      </button>
+    </div>
   </div>
   <ag-grid-angular
     style="width: 100%; height: 100%"
@@ -23,7 +32,6 @@
     [columnDefs]="columnDefs"
     [defaultColDef]="defaultColDef"
     rowSelection="single"
-    (rowSelected)="onRowSelected($event)"
     (selectionChanged)="onSelectionChanged($event)"
   >
   </ag-grid-angular>
