--- a/frontend/src/app/list-clients/modal-list/modal-list.component.scss
+++ b/frontend/src/app/list-clients/modal-list/modal-list.component.scss
@@ -1,13 +1,15 @@
 .container {
-  width: 80vw;
-  height: 60vh;
-  margin: auto;
+  padding: 16px;
+}
+
+p {
+  text-align: center;
+  font-size: 20px;
 }
 
 .buttons-container {
-  padding: 32px;
-
   display: flex;
   align-items: center;
+
   justify-content: space-around;
 }
